--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ pubspec.lock
 # Directory created by dartdoc
 # If you don't generate documentation locally you can remove this line.
 doc/api/
+/.idea
+/android/.idea
+/android/.gradle
+/android/gradle/wrapper
