--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -12,6 +12,7 @@ if (flutterRoot == null) {
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
@@ -22,7 +23,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "io.flutter.examples.flutter_view"
+        applicationId "tomek.sandbox.flutter"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
@@ -47,8 +48,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:design:27.1.0'
     implementation "io.reactivex.rxjava2:rxjava:2.1.7"
     implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
