--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ dependencies:
     sdk: flutter
 
   rxdart: "^0.16.0+1"
+  qrcode_reader: "^0.3.2"
 
   args: 1.3.0 # TRANSITIVE DEPENDENCY
   async: 2.0.4 # TRANSITIVE DEPENDENCY
