--- a/android/local.properties
+++ b/android/local.properties
@@ -1,3 +1,3 @@
 sdk.dir=c:\\Users\\Kriger\\AppData\\Local\\Android\\sdk\\
-flutter.sdk=C:\\Android\\flutter
+flutter.sdk=C:\\Users\\tpolanski\\Documents\\GitHub\\flutter
 flutter.buildMode=release
