--- a/android/local.properties
+++ b/android/local.properties
@@ -1,3 +1,3 @@
-sdk.dir=c:\\Users\\Kriger\\AppData\\Local\\Android\\sdk\\
+sdk.dir=C:\\Users\\tpolanski\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\Users\\tpolanski\\Documents\\GitHub\\flutter
-flutter.buildMode=release
+flutter.buildMode=debug
