--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
   rxdart: "^0.16.0+1"
   qrcode_reader: "^0.3.2"
   fluro: "^1.2.1"
+  firebase_messaging: "^0.1.4"
 
   args: 1.3.0 # TRANSITIVE DEPENDENCY
   async: 2.0.4 # TRANSITIVE DEPENDENCY
