--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   redux: "^2.1.1"
   flutter_redux: "^0.3.5"
   redux_epics: "^0.8.0"
+  cached_network_image: "^0.3.0"
 
   args: 1.3.0 # TRANSITIVE DEPENDENCY
   async: 2.0.4 # TRANSITIVE DEPENDENCY
