--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_redux: "^0.3.5"
   redux_epics: "^0.8.0"
   cached_network_image: "^0.3.0"
+  flutter_stetho: "^0.0.1"
 
   args: 1.3.0 # TRANSITIVE DEPENDENCY
   async: 2.0.4 # TRANSITIVE DEPENDENCY
@@ -68,3 +69,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/flutter-mark-square-64.png
+    - assets/flutter_high.png
