--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   redux_epics: "^0.8.0"
   cached_network_image: "^0.3.0"
   flutter_stetho: "^0.0.1"
+  android_intent: "^0.2.0"
 
 
 
